fix some inconsistencies with the layout in terms of spacing

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,6 +12,11 @@ body {
     background-color: white;
 }
 
+.content-container {
+    outline: 1px solid blue;
+    padding-block: 1.8em;
+}
+
 .content {
     padding: 1.6em;
 
